# metanetx-post

./: .gitattributes  .travis.yml  CHANGELOG.rst  Makefile  setup.cfg  tox.ini
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
docs/source/: conf.py  index.rst
src/metanetx_post/: __init__.py  _version.py
src/metanetx_post/api/: __init__.py  compound.py  helpers.py  reaction.py
src/metanetx_post/api/compound/: kegg.py  pubchem.py  structure.py
src/metanetx_post/api/reaction/: __init__.py  bigg.py  expasy.py  kegg.py  seed.py
src/metanetx_post/cli/: __init__.py  compound.py  main.py  reaction.py
src/metanetx_post/cli/compound/: kegg.py  structure.py
src/metanetx_post/cli/reaction/: bigg.py  kegg.py  main.py  seed.py
src/metanetx_post/etl/: __init__.py  compound.py  helpers.py  kegg_helpers.py
src/metanetx_post/etl/reaction/: __init__.py  expasy.py  kegg.py
src/metanetx_post/model/: __init__.py  abstract_molecule_adapter.py  bigg.py  inchi_conflict.py  openbabel_molecule_adapter.py  rdkit_molecule_adapter.py
tests/test_integration/: test_api.py
tests/test_unit/: test_helpers.py
