[metadata]
name = metanetx-post
url = https://github.com/Midnighter/metanetx-post
download_url = https://pypi.org/project/metanetx-post/
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = Enrich the information coming from MetaNetX from additional sources.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =

[options]
zip_safe = True
install_requires =
    aioftp ~=0.18
    Click ~=7.0
    click-log ~=0.3
    cobra-component-models ~=0.5
    depinfo ~=1.7
    httpx ~=0.17
    metanetx_assets ~=4.0
    metanetx_sdk ~=4.0
    pandas ~=1.0
    pydantic ~=1.4
    pyparsing ~=2.4
    rdflib ~=4.2
    SQLAlchemy ~=1.4
    tqdm ~=4.0
python_requires = >=3.8
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mnx-post = metanetx_post.cli:cli

[options.extras_require]
development =
    black
    isort
    tox
openbabel =
    openbabel ~=3.0
rdkit =
    rdkit

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/metanetx_post/_version.py
versionfile_build = metanetx_post/_version.py
tag_prefix =
parentdir_prefix = metanetx-post-

